--- a/sample_configs/base_config_strato.yaml
+++ b/sample_configs/base_config_strato.yaml
@@ -1,10 +1,10 @@
 # sample config
 
-data_root: /user/student.aau.dk/hbovbj17/project/data/speech_commands_v0.02/
-train_list_file: /user/student.aau.dk/hbovbj17/project/data/speech_commands_v0.02/_generated/training_list.txt
-val_list_file: /user/student.aau.dk/hbovbj17/project/data/speech_commands_v0.02/_generated/validation_list.txt
-test_list_file: /user/student.aau.dk/hbovbj17/project/data/speech_commands_v0.02/_generated/testing_list.txt
-label_map: /user/student.aau.dk/hbovbj17/project/data/speech_commands_v0.02/_generated/label_map.json
+data_root: /home/ubuntu/GoogleSpeechCommands/speech_commands_v0.02/
+train_list_file: /home/ubuntu/GoogleSpeechCommands/speech_commands_v0.02/_generated/training_list.txt
+val_list_file: /home/ubuntu/GoogleSpeechCommands/speech_commands_v0.02/_generated/validation_list.txt
+test_list_file: /home/ubuntu/GoogleSpeechCommands/speech_commands_v0.02/_generated/testing_list.txt
+label_map: /home/ubuntu/GoogleSpeechCommands/speech_commands_v0.02/_generated/label_map.json
 
 exp:
     wandb: True
@@ -37,7 +37,7 @@ hparams:
         center: False
     
     model:
-        name: # if name is provided below settings will be ignored during model creation   
+        name: kwt-1 # if name is provided below settings will be ignored during model creation   
         input_res: [40, 98]
         patch_res: [40, 1]
         num_classes: 35
@@ -70,7 +70,7 @@ hparams:
             #s_max: 0.1
 
             #bg_noise:
-            #bg_folder: /user/student.aau.dk/hbovbj17/project/data/speech_commands_v0.02/_generated/_background_noise_/
+            #bg_folder: /home/ubuntu/GoogleSpeechCommands/speech_commands_v0.02/_background_noise_/
 
         spec_aug:
             n_time_masks: 2
