--- a/sample_configs/base_config_strato.yaml
+++ b/sample_configs/base_config_strato.yaml
@@ -11,7 +11,7 @@ exp:
     wandb_api_key: 
     proj_name: data2vec_KWS
     exp_dir: ./runs
-    exp_name: baseline
+    exp_name: finetune
     device: auto
     log_freq: 20    # log every l_f steps
     log_to_file: True
